--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ body {
     font-size: 16px;
 }
 
+img {
+    display: inline;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
+}
+
 .container {
     width: 80%;
     margin: auto;
@@ -13,4 +20,12 @@ body {
 .bottom {
     position: fixed;
     bottom: 0;
+}
+
+.image-cropper {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
 }
