--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body {
     font-size: 16px;
 }
 
-img {
-    display: inline;
-    margin: 0 auto;
-    height: 100%;
-    width: auto;
+img.rounded {
+    object-fit: cover;
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
 }
 
 .container {
@@ -20,12 +20,4 @@ img {
 .bottom {
     position: fixed;
     bottom: 0;
-}
-
-.image-cropper {
-    width: 100px;
-    height: 100px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 50%;
 }
