--- a/style.css
+++ b/style.css
@@ -46,3 +46,7 @@ img.rounded {
     color: #f1f1f1;
 }
 
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
