--- a/styles/style.css
+++ b/styles/style.css
@@ -2,13 +2,13 @@ body {
     background-color: #f5f5f5;
     color: #121316;
     font-family: "Libre Baskerville", "Times New Roman", Times, serif;
-    font-size: 17px;
+    font-size: 1em;
     margin: 0;
 }
 
 h1 {
     font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
-    font-size: 50px;
+    font-size: 3.15em;
     font-weight: bold;
 }
 
@@ -18,39 +18,39 @@ h2 {
 
 h3 {
     font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
-    margin-bottom: 1px;
+    margin-bottom: 0.1em;
     color: #5b9279;
 }
 
 h5 {
     font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
-    margin-top: 1px;
+    margin-top: 0.1em;
     color: #555
 }
 
 p {
     font-family: "Libre Baskerville", "Times New Roman", Times, serif;
-    font-size: 17px;
+    font-size: 1.15em;
 }
 
 img.rounded {
     object-fit: cover;
     border-radius: 50%;
-    height: 100px;
-    width: 100px;
+    height: 7em;
+    width: 7em;
 }
 
 .container {
     width: 50%;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 3em;
+    padding-bottom: 3em;
     margin: auto;
 }
 
 .column {
     float: left;
     width: 33.33%;
-    padding-top: 10px;
+    padding-top: 0.5em;
     padding-left: 10%;
 }
 
@@ -63,7 +63,7 @@ img.rounded {
 .topbuffer {
     background-color: #5b9279;
     overflow: hidden;
-    min-height: 20px;
+    min-height: 1.33em;
     width: 100%;
 }
 
@@ -71,9 +71,9 @@ img.rounded {
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 1em 1em;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 1em;
 }
 
 .bottombuffer {
@@ -81,7 +81,7 @@ img.rounded {
     overflow: hidden;
     position: fixed;
     bottom: 0;
-    min-height: 20px;
+    min-height: 1.33em;
     width: 100%;
     text-align: center;
 }
@@ -89,14 +89,14 @@ img.rounded {
 .bottombuffer a {
     color: #12130f;
     text-align: center;
-    padding: 10px;
+    padding: 0.75em;
     text-decoration: none;
-    font-size: 11px;
+    font-size: 0.7em;
 }
 
 .navbar {
     overflow: hidden;
-    padding-top: 25px;
+    padding-top: 1.33em;
     text-align: center;
 }
 
@@ -104,9 +104,9 @@ img.rounded {
     float: left;
     color: #555;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0.7em 0.7em;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1.33em;
 }
 
 .navbar a:hover {
@@ -119,7 +119,7 @@ img.rounded {
 }
 
 .typewriter h1 {
-    border-right: solid 3px black;
+    border-right: solid 0.05em black;
     white-space: nowrap;
     overflow: hidden;
 }
@@ -131,7 +131,7 @@ img.rounded {
 
 @keyframes animated-text{
     from{width: 0;}
-    to{width: 525px;}
+    to{width: 10.5em;}
 }
 
 @keyframes animated-cursor{
