--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,7 @@ img.rounded {
 }
 
 .navbar a {
-    float: left;
+    float: right;
     color: #555;
     text-align: center;
     padding: 0.7em 0.7em;
