--- a/styles/style.css
+++ b/styles/style.css
@@ -41,9 +41,9 @@ img.rounded {
 }
 
 .container {
-    width: 50%;
-    padding-top: 3em;
-    padding-bottom: 3em;
+    width: 60%;
+    padding-top: 1em;
+    padding-bottom: 1em;
     margin: auto;
 }
 
@@ -134,4 +134,19 @@ img.rounded {
 @keyframes animated-cursor{
     from{border-right-color: black;}
     to{border-right-color: transparent;}
+}
+
+.bg {
+    position: relative;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 95%;
+}
+
+@media screen and (prefers-reduced-motion: no-preference) {
+    html {
+        scroll-behavior: smooth;
+    }
 }
