--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@ img.rounded {
     float: right;
     color: #555;
     text-align: center;
-    padding: 0.7em 0.7em;
+    padding: 0.5em 0.5em;
     text-decoration: none;
     font-size: 1.33em;
 }
@@ -148,5 +148,31 @@ img.rounded {
 @media screen and (prefers-reduced-motion: no-preference) {
     html {
         scroll-behavior: smooth;
+    }
+}
+
+@media screen and (max-width: 1020px) {
+    h1, h2, h3, h5, .container, .typewriter {
+        float: none;
+        width: 80%;
+    }
+    .navbar a {
+        float: top;
+        width: 80%;
+    }
+    h1 {
+        font-size: 2em;
+    }
+    h2 {
+        font-size: 1.8em;
+    }
+    h3 {
+        font-size: 1.7em;
+    }
+    h5, #quoteDisplay {
+        font-size: 1em;
+    }
+    p {
+        font-size: 1.3em;
     }
 }
