--- a/styles/style.css
+++ b/styles/style.css
@@ -118,6 +118,7 @@ img.rounded {
     color: #4CAF50;
 }
 
+/** Typewriter Styling and Animation Start **/
 .typewriter h1 {
     border-right: solid 0.05em black;
     white-space: nowrap;
@@ -135,6 +136,7 @@ img.rounded {
     from{border-right-color: black;}
     to{border-right-color: transparent;}
 }
+/** Typewriter End **/
 
 .bg {
     position: relative;
@@ -145,12 +147,14 @@ img.rounded {
     opacity: 95%;
 }
 
+/* Enable smooth scrolling, unless the user has a preference */
 @media screen and (prefers-reduced-motion: no-preference) {
     html {
         scroll-behavior: smooth;
     }
 }
 
+/* Changes for Mobile/Smaller Screens */
 @media screen and (max-width: 1020px) {
     h1, h2, h3, h5, .container, .typewriter {
         float: none;
@@ -161,23 +165,28 @@ img.rounded {
         font-size: 3em;
     }
     h1, .typewriter h1 {
-        font-size: 4em;
+        font-size: 5em;
     }
     h2 {
-        font-size: 3em;
+        font-size: 4em;
     }
     h3 {
-        font-size: 2em;
+        font-size: 3em;
     }
     h5, #quoteDisplay {
-        font-size: 1.25em;
+        font-size: 2em;
     }
     p {
-        font-size: 1.75em;
+        font-size: 2em;
     }
     img.rounded {
         margin-top: 5em;
         height: 20em;
         width: 20em;
     }
+    .topbuffer, .bottombuffer, .bottombuffer a {
+        min-height: 3em;
+        font-size: 2em;
+    }
+
 }
